2008-07-02  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-main.c:
	* src/libtracker-common/tracker-config.[ch]: Removed the email
	client option, it is redundant now. Removed the index-modules
	since that is now going to be changed to be ignore-modules.
	
	* src/libtracker-common/tracker-log.c: Use gsize for log size and
	remove perror, instead use g_fprintf(stderr, ...) when we get an
	error so we don't recurse.
	
	* src/trackerd/tracker-crawler.c: Only add monitors when we
	process directories, so they are added breadth ways not depth
	ways. Also, make the debugging ALWAYS available, this changes with
	the -v option or the config setting.
	
	* src/trackerd/tracker-monitor.c: Don't add any monitors if it is
	disabled in the config. Also, make the debugging ALWAYS available.
	
2008-07-02  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/tracker-indexer/tracker-main.c
	* src/trackerd/tracker-main.c
	* src/libtracker-db/tracker-db-manager.c
	* src/libtracker-db/tracker-db-manager.h
	* tests/libtracker-db/tracker-db-manager-test-attach.c
	* tests/libtracker-db/union-performance.c
	* tests/libtracker-db/tracker-db-manager-test-unattach.c
	* tests/libtracker-db/tracker-db-manager-test-custom.c

	Removing the dir in the temp dir must always happen at startup, never
	at shutdown

2008-07-02  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/modules/files.c (tracker_metadata_get_embedded):
	* src/tracker-indexer/modules/evolution.c (get_imap_accounts): Plug
	some leaks.

2008-07-02  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-module.h: Remove get_directories() and
	get_ignore_directories() from modules API. The data specified in the
	.module file will be used.
	* src/tracker-indexer/tracker-indexer-module.[ch]: Remove internal
	API for these as well.
	* src/tracker-indexer/applications.c:
	* src/tracker-indexer/dummy.c:
	* src/tracker-indexer/evolution.c:
	* src/tracker-indexer/files.c: